[package]
name = "hawk-engine"
version = "0.1.0"
edition = "2021"
authors = ["LazyKernel"]

[lib]
name = "engine"
path = "src/engine/lib.rs"

[[bin]]
name = "test-game"
path = "src/game/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytemuck = "1.12.1"
lazy_static = "1.4.0"
log = "0.4.17"
nalgebra = "0.32.2"
png = "0.17.6"
pretty_env_logger = "0.4.0"
rapier3d = { version = "0.17.2", features = ["simd-stable", "serde-serialize"] }
specs = { version = "0.18.0", features = ["specs-derive"] }
thiserror = "1.0.37"
tobj = "3.2.3"
vulkano = "0.32.0"
vulkano-shaders = "0.32.0"
vulkano-win = "0.32.0"
winit = "0.27.5"
winit_input_helper = "=0.13.0"

[profile.dev]
opt-level = 1 
