[package]
name = "hawk-engine"
version = "0.1.0"
edition = "2021"
authors = ["LazyKernel"]
default-run = "test-game"

[lib]
name = "engine"
path = "src/engine/lib.rs"

[[bin]]
name = "test-game"
path = "src/game/main.rs"

[[bin]]
name = "network-test"
path = "src/network/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytemuck = "1.12.1"
lazy_static = "1.4.0"
log = "0.4.17"
nalgebra = "0.32.2"
png = "0.17.6"
pretty_env_logger = "0.4.0"
rapier3d = { version = "0.17.2", features = ["simd-stable", "serde-serialize"] }
rmp = "0.8.12"
rmp-serde = "1.1.2"
specs = { version = "0.18.0", features = ["specs-derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"
tobj = "3.2.3"
tokio = { version = "1.45", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
vulkano = "0.35"
vulkano-shaders = { version = "0.35", features = ["shaderc-build-from-source"] }
winit = "0.30"

[profile.dev]
opt-level = 1 
